[gd_scene load_steps=13 format=2]

[ext_resource path="res://Pic/Free-Horizontal-2D-Game-Backgrounds-2.jpg" type="Texture" id=1]
[ext_resource path="res://ARIAL.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scene/Dialog.gd" type="Script" id=3]
[ext_resource path="res://Scene/Input.gd" type="Script" id=4]
[ext_resource path="res://Scene/CommandProcessor.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.878431, 0.721569, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.847059, 0.752941, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=7]
size = 30
outline_color = Color( 1, 1, 1, 0 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Result_page" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 30.0
margin_right = 120.0
margin_bottom = 80.0
color = Color( 1, 0.878431, 0.721569, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.0
margin_top = 36.0
margin_right = 98.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "OtherQuestion"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 100
custom_constants/margin_left = 40
custom_constants/margin_bottom = 60

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
visible = false
margin_left = 40.0
margin_top = 100.0
margin_right = 1880.0
margin_bottom = 1020.0
color = Color( 1, 0.878431, 0.721569, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 100.0
margin_right = 1880.0
margin_bottom = 1020.0
custom_constants/separation = 10

[node name="textArea" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1840.0
margin_bottom = 854.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/textArea"]
margin_right = 1840.0
margin_bottom = 854.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/textArea/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1820.0
margin_bottom = 834.0
custom_styles/bg = SubResource( 2 )
scroll_horizontal_enabled = false

[node name="HistoryRows" type="VBoxContainer" parent="MarginContainer/VBoxContainer/textArea/MarginContainer/ScrollContainer"]
margin_right = 1800.0
margin_bottom = 814.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="InputArea" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 864.0
margin_right = 1840.0
margin_bottom = 910.0
rect_min_size = Vector2( 50, 46 )
custom_styles/panel = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/InputArea"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1838.0
margin_bottom = 44.0
custom_constants/margin_right = 10
custom_constants/margin_top = 2
custom_constants/margin_left = 10
custom_constants/margin_bottom = 2

[node name="Input" type="LineEdit" parent="MarginContainer/VBoxContainer/InputArea/MarginContainer"]
margin_left = 10.0
margin_top = 2.0
margin_right = 1826.0
margin_bottom = 40.0
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 6 )
script = ExtResource( 4 )

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 920.0
margin_right = 1840.0
margin_bottom = 920.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="text_entered" from="MarginContainer/VBoxContainer/InputArea/MarginContainer/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/InputArea/MarginContainer/Input" to="MarginContainer/VBoxContainer/InputArea/MarginContainer/Input" method="_on_Input_text_entered"]
[connection signal="request_completed" from="HTTPRequest" to="CommandProcessor" method="_on_HTTPRequest_request_completed"]
